# paul-g-embeedings

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: package.json
apps/api/src/: chat.ts  index.ts  persona.ts  rerank.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  main.tsx  styles.css
be/: .gitignore  package-lock.json  package.json  tsconfig.json
be/constants/: example.html
be/prisma/: schema.prisma
be/prisma/migrations/20250926154139_init/: migration.sql
be/prisma/migrations/20250929182040_new/: migration.sql
be/prisma/migrations/20251006151655_/: migration.sql
be/prisma/migrations/20251007161543_add_clean_content_field/: migration.sql
be/src/: index.ts
be/src/hn/: storyFetcher.ts
be/src/utils/: contentCleaner.ts  types.ts
ml/: README.md  pyproject.toml
ml/src/pg_ml/: __init__.py  config.py  dataset.py  eval.py  finetune.py
