[project]
name = "pg-ml"
version = "0.1.0"
description = "Evaluation and persona fine-tuning for paul-g-embeddings"
requires-python = ">=3.11"
dependencies = [
  "google-genai>=1.0.0",
  "python-dotenv>=1.0.1",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0"]

[project.scripts]
pg-eval = "pg_ml.eval:main"
pg-build-dataset = "pg_ml.dataset:main"
pg-finetune = "pg_ml.finetune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_ml"]

[tool.ruff]
line-length = 100
